--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"autoprefixer": "^10.4.16",
+		"flowbite": "^2.2.1",
+		"flowbite-svelte": "^0.44.23",
 		"postcss": "^8.4.33",
 		"svelte": "^4.2.7",
 		"tailwindcss": "^3.4.1",
